test/fail/fnatr.min
program
    function number x do return 3
start
    x := 4;
end
